HOTFIX: HSS-56 select z-index issue

--- a/hat/assets/css/iaso/_select.scss
+++ b/hat/assets/css/iaso/_select.scss
@@ -23,7 +23,7 @@
     }
 
     .Select-menu-outer {
-        z-index: 100;
+        z-index: 999;
     }
 
     .Select-value-label {
